--- a/cinema/Views/Booking/UserBooking.cshtml
+++ b/cinema/Views/Booking/UserBooking.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{ Layout = null;}
+﻿@{ Layout = null;}
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-
     <title>Home</title>
     <!-- Favicon -->
     <!-- Google Fonts -->
@@ -30,16 +28,12 @@
     <link rel="stylesheet" href="~/assets/vendor/hs-bg-video/hs-bg-video.css">
     <link href="~/assets/css/custom-front.css" rel="stylesheet" />
     <link href="~/assets/vendor/fancybox/jquery.fancybox.css" rel="stylesheet" />
-
-
     <link href="~/Videojs/video-js.css" rel="stylesheet" />
 </head>
+
 <body>
     <link href="~/assets/css/custom-front.css" rel="stylesheet" />
-
     <header id="header" class="u-header u-header--abs-top-md u-header--show-hide-md u-header--untransitioned" data-header-fix-moment="500" data-header-fix-effect="slide">
-
-
         <div style="background-color:#000000">
             <div id="logoAndNav" class="container">
                 <!-- Nav -->
@@ -61,56 +55,29 @@
                                 <!-- Blog - Submenu -->
                                 <!-- End Submenu -->
                             </li>
-
-                            
-
                             <li class="nav-item hs-has-sub-menu u-header__nav-item hs-sub-menu-opened" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
                                 <a href="@Url.Action("Login","UserLogin")" id="blogMegaMenu" class="nav-link u-header__nav-link" aria-haspopup="true" aria-expanded="false" aria-labelledby="blogSubMenu" style="color:#fff">
                                     Login
                                     <span class="fa fa-user"></span>
                                 </a>
-
-
                             </li>
-
-
-
                         </ul>
                     </div>
-
                 </nav>
-
-                <!-- End Navigation -->
             </div>
         </div>
-
     </header>
+
 
     @model IEnumerable<cinema.Models.TicketDetail>
     @foreach (var item in Model)
     {
         <div class="pyidaungsu">
-
-
-
             <main id="content" role="main">
-                <!-- End News Carousel -->
-
-
-
-
-
                 <div class="position-relative u-bg-light-blue-50 custom_paragraph">
                     <div class="container u-space-1">
-                        <!-- Title -->
-                        <!-- End Title -->
                         <div class="row">
-
-
-
                             <div class="col-lg-3 col-md-3 col-xs-12 col-sm-12">
-
-                                <!-- News Carousel -->
                                 <div class="js-slick-carousel transition-3d-hover" data-slides-show="1" style="margin-top:-20px"
                                      data-autoplay="true"
                                      data-slides-scroll="1"
@@ -176,24 +143,12 @@
                                         </a><br />
                                     </div>
                                 </div>
-
                             </div>
-
-
-
-
                         </div>
                         <br />
                     </div>
                 </div>
-
-
-
-
             </main>
-
-
-
         </div>
     }
 
@@ -212,7 +167,6 @@
                     <li><a class="u-list__link" href="@Url.Action("Browsemovie","Cinema",new {showingtime="NowShowing" })">Now Showing</a></li>
                     <li><a class="u-list__link" href="@Url.Action("Browsemovie","Cinema",new {showingtime="ComingSoon" })">Comming Soon</a></li>
                     <li><a class="u-list__link" href="@Url.Action("Browsemovie","Cinema")">All Moives</a></li>
-
                 </ul>
                 <!-- End List -->
             </div>
@@ -231,12 +185,6 @@
                 </address>
                 <!-- End Address -->
             </div>
-
-
-
-
-
-
             <div class="col-sm-4 col-md-4 col-lg-5">
                 <div class="mb-4">
                     <!-- Title -->
@@ -261,7 +209,6 @@
                         </div>
                     </div>
                     <!-- End Input -->
-
                 </div>
                 <ul class="list-inline mb-0">
 
@@ -270,13 +217,11 @@
                             <span class="fab fa-google u-icon__inner" style="font-size:1.3em"></span>
                         </a>
                     </li>
-
                 </ul>
                 <!-- End Social Networks -->
             </div>
         </div>
         <hr />
-
     </div>
 </footer>
 
@@ -311,10 +256,6 @@
     <script src="~/assets/js/components/hs.show-animation.js"></script>
     <script src="~/assets/js/components/hs.go-to.js"></script>
     <!-- JS Implementing Plugins -->
-
-
-
-
     <script src="/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
     <script>
         $(document).on('ready', function () {
@@ -327,12 +268,9 @@
     <script src="/assets/js/components/hs.video-player.js"></script>
     <!-- JS Plugins Init. -->
 
-
-
     <script>
         $(function () {
             $.fn.SendEmail = function (Name, Email, Message) {
-
                 $.ajax({
                     url: '/Cinema/ReceiveMessage',
                     dataType: "json",
