--- a/cinema/Views/UserLogin/Login.cshtml
+++ b/cinema/Views/UserLogin/Login.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-<!DOCTYPE html>
-
+﻿<!DOCTYPE html>
 <html lang="en">
 @{
     Layout = null;
@@ -9,24 +6,15 @@
 <head>
     <title>Ticket Booking Web Portal</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="icon" type="image/png" href="~/Login/images/img-01.png" " />
-
     <link href="~/Login/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
     <link href="~/fonts/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
     <link href="~/vendor/animate/animate.css" rel="stylesheet" />
-
     <link href="~/vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" />
-
-
     <link href="~/Login/vendor/select2/select2.min.css" rel="stylesheet" />
-
     <link href="~/Login/css/util.css" rel="stylesheet" />
-
     <link href="~/Login/css/main.css" rel="stylesheet" />
-
 </head>
 <body>
     <div class="limiter">
@@ -34,18 +22,14 @@
             <div class="wrap-login100">
                 <div class="login100-pic js-tilt" data-tilt>
                     <img src="~/Login/images/img-01.png" alt="IMG">
-
                 </div>
                 @using (Html.BeginForm("Login", "UserLogin", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
                 {
                     @Html.AntiForgeryToken()
-
-
                     <form class="login100-form validate-form">
                         <span class="login100-form-title">
                             Member Login
                         </span>
-
                         <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                             <input class="input100" type="text" name="Email" placeholder="Email">
                             <span class="focus-input100"></span>
@@ -53,7 +37,6 @@
                                 <i class="fa fa-envelope" aria-hidden="true"></i>
                             </span>
                         </div>
-
                         <div class="wrap-input100 validate-input" data-validate="Password is required">
                             <input class="input100" type="password" name="Password" placeholder="Password">
                             <span class="focus-input100"></span>
@@ -61,13 +44,11 @@
                                 <i class="fa fa-lock" aria-hidden="true"></i>
                             </span>
                         </div>
-
                         <div class="container-login100-form-btn">
                             <button class="login100-form-btn">
                                 Login
                             </button>
                         </div>
-
                         <div class="text-center p-t-12">
                             <span class="txt1">
                                 Forgot
@@ -76,21 +57,13 @@
                                 Username / Password?
                             </a>
                         </div>
-
-                        @*<div class="text-center p-t-136">
-                                <a class="txt2" href="@Url.Action("Register","UserLogin")">
-                                    Create your Account
-                                    <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-                                </a>
-                            </div>*@
-                    </form>
+                       </form>
 
                 }
 
                 </div>
             </div>
         </div>
-
 
                 <script src="~/Login/vendor/jquery/jquery-3.2.1.min.js"></script>
 
